--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <main>
         <nav class="navbar">
             <div class="logo">
-                <i class="fa-brands fa-neos"></i>
+                <i class="fa-brands fa-neos" id="logo"></i>
             </div>
             <ul class="navlist" id="list">
-                <li class="navlist-item"><a href="#"></a>Home</li>
-                <li class="navlist-item"><a href="#"></a>About</li>
-                <li class="navlist-item"><a href="#"></a>Services</li>
-                <li class="navlist-item"><a href="#"></a>Work</li>
-                <li class="navlist-item"><a href="#"></a>Contact</li>
-                <li class="nav-btn">Lets talk</li>
+                <li class="navlist-item" ><a href="#"></a>Home</li>
+                <li class="navlist-item" ><a href="#"></a>About</li>
+                <li class="navlist-item" ><a href="#"></a>Services</li>
+                <li class="navlist-item" ><a href="#"></a>Work</li>
+                <li class="navlist-item" ><a href="#"></a>Contact</li>
+                <li class="nav-btn" >Lets talk</li>
             </ul>
 
             <a href="#" class="hamburger" id="hamburger"><i class="fa-solid fa-bars" id="bars"></i></a>
@@ -42,6 +42,7 @@
     
 
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
